// Vitest Snapshot v1

exports[`Board > Renders board 1`] = `
<div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Game > Renders game 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="game-info"
  >
    <div
      className="status"
    >
      Next player: X
    </div>
    <ol>
      <li>
        <button
          className="select-move active"
          onClick={[Function]}
        >
          Go to game start
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Square > Renders a button 1`] = `
<button
  className="square"
  onClick={[Function]}
>
  X
</button>
`;

exports[`Square > Renders a button 2`] = `
<button
  className="square"
  onClick={[Function]}
>
  O
</button>
`;

exports[`Square > Renders a button 3`] = `
<button
  className="square"
  onClick={[Function]}
/>
`;

exports[`Square > Renders a button with a label dependent on props.value 1`] = `
<button
  className="square"
  onClick={[Function]}
>
  X
</button>
`;

exports[`Square > Renders a button with a label dependent on props.value 2`] = `
<button
  className="square"
  onClick={[Function]}
>
  O
</button>
`;

exports[`Square > Renders a button with a label dependent on props.value 3`] = `
<button
  className="square"
  onClick={[Function]}
/>
`;
